--- a/gulp/package.json
+++ b/gulp/package.json
@@ -27,7 +27,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "imagemin-mozjpeg": "^6.0.0",
-    "imagemin-pngquant": "^5.0.1"
+    "imagemin-pngquant": "^5.0.1",
+    "minimist": "^1.2.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0"
