--- a/gulp/package.json
+++ b/gulp/package.json
@@ -18,8 +18,9 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
-    "gulp-clean-css": "^3.9.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
